# StormOverlay

./: .gitignore  README.md  pyproject.toml
src/stormoverlay/: KiWisToCSV.ps1  data.py  idf.py  load_csv.py  load_dfs0.py  statistics_calculator.py  stormoverlay.py  wiski.py
src/stormoverlay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: test_stormoverlay.py
