[project]
name = "stormoverlay"
version = "0.2.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mikeio>=2.6.0",
    "mikeio1d>=1.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]
[project.scripts]
stormoverlay = "stormoverlay.stormoverlay:main"
wiski = "stormoverlay.wiski:main"